<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".register.RegisterActivity">
        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/text_register"
                android:textSize="48sp"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/registerName"
                android:hint="@string/text_nama"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/registerEmail"
                android:hint="@string/text_email"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.erdeprof.storyapp.customview.MyEditText
                android:id="@+id/registerPasswordCustom"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"/>
            <Button
                android:id="@+id/btnRegister"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#FFFFFF"
                android:text="@string/text_register"
                android:background="@drawable/bg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>