<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">
        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <ImageView
                android:id="@+id/ivGambar"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@mipmap/ic_launcher"
                android:layout_width="130dp"
                android:layout_height="130dp"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_marginTop="20dp"
                android:text="@string/text_login"
                android:gravity="center"
                android:textSize="52sp"
                android:textColor="@color/purple_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"/>

            <EditText
                android:id="@+id/loginEmail"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"/>

            <com.erdeprof.storyapp.customview.MyEditText
                android:id="@+id/loginPasswordCustom"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:alpha="0"/>

            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:background="@drawable/bg_button"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"/>
                <Button
                    android:id="@+id/btnRegister"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:background="@drawable/bg_button"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/text_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>